--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
 PORT=3000
-OPENAI_API_KEY=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
-GROK_API_KEY=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
+OPENAI_API_KEY=suakey
+GROK_API_KEY=suakey
 OLLAMA_API_KEY=your_ollama_key_here
 OPENAI_BASE_URL=https://api.openai.com/v1/chat
 GROK_BASE_URL=https://api.groq.com/openai/v1
