--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,4 @@ services:
       - FLASK_ENV=development
       - FLASK_DEBUG=1 
     command: flask run --host=0.0.0.0 --port=3000  # Comando para rodar a aplicação; ajuste se necessário
+    restart: unless-stopped  # Política de reinício
